# RAG-Lab

./: celery_app.py  config.py  pyproject.toml
eval/: evaluate.py  golden_set.json
src/: main.py
src/api/: pipeline.py  schema.py  task.py
src/api/routers/: benchmark.py  compare.py  documents.py  jobs.py  pipeline.py  query.py
src/database/: session.py  sync_session.py
src/database/models/: chunk_trace.py  pipeline.py  pipeline_config.py  pipeline_result.py
src/rag/: core.py  ingest.py  models.py  pipeline.py
src/rag/steps/: generation.py  post_retrieval.py  query_translation.py  retrieval.py
src/storage/: minio_client.py
tests/: conftest.py  pipeline_presets_test.py  test_pipeline.py
tests/integration/: conftest.py  test_compare_routes.py  test_pipeline_routes.py  test_query_routes.py  test_upload_routes.py
tests/units/: conftest.py  model_tests.py  test_generation.py  test_models.py  test_pipeline.py  test_post_retrieval.py  test_query_translation.py  test_retrieval.py
