[project]
name = "rag-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "datasets>=5.0.0",
    "fastapi>=0.137.1",
    "fastembed>=0.8.0",
    "filetype>=1.2.0",
    "langchain>=1.3.4",
    "langchain-classic>=1.0.7",
    "langchain-cohere>=0.6.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.8.9",
    "minio>=7.2.20",
    "psycopg2-binary>=2.9.12",
    "pypdf>=6.13.1",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "sentence-transformers>=5.5.1",
]
